Image scaling fixed

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,6 +16,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500;700&family=Montserrat&display=swap"
     rel="stylesheet">
 
+  <!-- CSS -->
+  <link rel="stylesheet" href="../css/reset.css">
+
   <!-- Animate CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
 
